--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "author": "Mitu",
     "scripts": {
-      "start": "node index.js",
-      "dev": "nodemon index.js"
+      "start": "node server.js",
+      "dev": "nodemon server.js"
     },
     "dependencies": {
       "cors": "^2.8.5",
